Added test text

--- a/day1/day1.ipynb
+++ b/day1/day1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python language has several native data structures used to store and manipulate data. These include the list (e.g. `['item 1', 'item 2']`), the dictionary (e.g. `{'eggs': 2, 'lemons': 12}`), the tuple (e.g. `(0, 2, 'no value', True)`), and the set (e.g. `set(('oak', 'pine', 'birch'))`).\n",
+    "Test text: The Python language has several native data structures used to store and manipulate data. These include the list (e.g. `['item 1', 'item 2']`), the dictionary (e.g. `{'eggs': 2, 'lemons': 12}`), the tuple (e.g. `(0, 2, 'no value', True)`), and the set (e.g. `set(('oak', 'pine', 'birch'))`).\n",
     "\n",
     "The NumPy array is an additional data structure added by the NumPy package. It allows for more convenient numerical calculations in Python, which are also faster than attempting to use the native Python structures for numerics. This is primarily because NumPy is partially written in C, and NumPy arrays can be handled internally by NumPy as C objects, then passed back to you in Python.\n",
     "\n",
