image for task2 added; task 1 exercise written

--- a/day2/day2.ipynb
+++ b/day2/day2.ipynb
@@ -445,7 +445,56 @@
     "id": "rr5GsKHnLWLx"
    },
    "source": [
-    "### [TO BE ADDED LATER] Task: Create the plot shown below and save it as a pdf."
+    "### Task: Create the plot shown below and save it as `task1.pdf`.\n",
+    "\n",
+    "![Task-1 plot](images/task1.png)\n",
+    "\n",
+    "Make sure your plot has the following properties:\n",
+    "\n",
+    "1. The figure size should be 9 inches by 9 inches\n",
+    "2. Y-axis label fontsize should be 15\n",
+    "3. Clockwise from the top-left panel, the lines are solid-green, dashed-cyan, dashdot-black and dotted-red. Hint: Recall that the code for linestyle and linecolor can be combined into one code. The codes for solid, dashed, dashdot and dotted linestyles are '-','--','-.',':' respectively. The codes for the colors green, cyan, black and red are 'g','c','k' and 'r' respectively. \n",
+    "4. You are encouraged to use the object-oriented style (`ax.plot`) to define the subplots. However, given the simple exercise, you can also use `plt.plot`.\n",
+    "\n",
+    "If you are unsure about the exact syntax, I highly encourage simply searching it online."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace()    # define an array using np.linspace with start=0, stop=10, and num=100\n",
+    "\n",
+    "# create a grid of plots \n",
+    "\n",
+    "fig, ax = plt.subplots(nrows= , ncols= , figsize=( , )) \n",
+    "\n",
+    "# if using plt.plot, you can initialize the figure with fig = plt.figure(figsize= )\n",
+    "\n",
+    "labels = ['$\\sqrt{x}$', '$x$', '$x^2$', '$x^3$']    # matplotlib labels have Latex support\n",
+    "label_fs =    # define fontsize for the y-axis labels\n",
+    "\n",
+    "# ax is a (2,2) array of matplotlib subplot objects. \n",
+    "# you can access each subplot just like you would access \n",
+    "# elements of a numpy array\n",
+    "\n",
+    "# top-left subplot\n",
+    "\n",
+    "ax[0,0].plot(x, np.sqrt(x), '-g') # solid green\n",
+    "ax[0,0].set_ylabel(labels[0], fontsize=label_fs)\n",
+    "\n",
+    "# top-right sub-plot\n",
+    "\n",
+    "\n",
+    "# bottom-left subplot\n",
+    "\n",
+    "\n",
+    "# bottom-right subplot\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(wspace=0.3)    # adjust the width between subplots to provide room for y-axis labels"
    ]
   },
   {
