minor typos in day3 corrected

--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.Political_Party"
+    "df.Pol"
    ]
   },
   {
@@ -137,7 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "iris = sns.load_dataset(\"iris\")"
    ]
   },
@@ -170,14 +169,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris.describe()\n"
+    "iris.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " `Count` just tells us how many times each field appears, which is 20 for each field here. Some datasets will have missing data, which are represented by 'NaN' (Not a Number) in which case `count` will not be the same for each field. The rest of the rows give a statistical summary."
+    " `Count` just tells us how many times each field appears, which is 150 for each field here. Some datasets will have missing data, which are represented by 'NaN' (Not a Number) in which case `count` will not be the same for each field. The rest of the rows give a statistical summary."
    ]
   },
   {
@@ -471,14 +470,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[i for i in dir(iris.plot) if not i.startswith('_')]"
+    "[i for i in dir(iris.plot) if not i.startswith('_')]    # list of functions/methods in iris.plot that don't start with '_'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try plotting iris using box plot. This plot shows the min, max, mean, 25, 50, and 75 quartiles along with outliers in a single plot. "
+    "Try plotting iris using box plot. This plot shows the min, max, mean, 25, 50, and 75 quartiles along with outliers in a single plot. More on box plots [here](https://towardsdatascience.com/understanding-boxplots-5e2df7bcbd51)."
    ]
   },
   {
@@ -570,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that we're not getting means and standard deviations within each group. "
+    "We can see that we're now getting means and standard deviations within each group. "
    ]
   },
   {
@@ -794,7 +793,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
